# Komis

./: .gitignore  CMakeLists.txt  README.md  exampleKomisDB.komisdb
data/: baza_danych.komisdb
src/database/: vehicle.cpp  vehicle.hpp  vehicle_copy.hpp  vehicle_manager.cpp  vehicle_manager.hpp  vehicle_model.hpp  vehicle_querying.cpp  vehicle_querying.hpp  vehicle_template.cpp  vehicle_template.hpp
src/database/vehicle_data/: vehicle_basic_data.cpp  vehicle_basic_data.hpp  vehicle_filters_data.hpp  vehicle_specimen_data.cpp  vehicle_specimen_data.hpp  vehicle_technical_data.cpp  vehicle_technical_data.hpp
src/database/vehicle_management/: vehicle_manager.cpp  vehicle_manager.hpp  vehicle_querying.cpp  vehicle_querying.hpp
src/gui/app/: komis_app.cpp  komis_app.hpp
src/gui/widgets/: README.md
src/gui/widgets/komis_frame/implementation/: komis_frame.cpp  komis_frame.hpp
src/gui/widgets/komis_frame/interface/: i_komis_frame.cpp  i_komis_frame.fbp  i_komis_frame.h
src/gui/widgets/scrolled_vehicle_list_item_panel/implementation/: scrolled_vehicle_list_item_panel.cpp  scrolled_vehicle_list_item_panel.hpp
src/gui/widgets/scrolled_vehicle_list_item_panel/interface/: i_scrolled_vehicle_list_item_panel.cpp  i_scrolled_vehicle_list_item_panel.fbp  i_scrolled_vehicle_list_item_panel.h
src/gui/widgets/scrolled_vehicle_list_panel/implementation/: scrolled_vehicle_list_panel.cpp  scrolled_vehicle_list_panel.hpp
src/gui/widgets/scrolled_vehicle_list_panel/interface/: i_scrolled_vehicle_list_panel.h  (+2 more)
src/serialization/: vehicle_serializer.cpp  vehicle_serializer.hpp
(+44 files in other folders)
